Add Swagger Declarative comments
